[tool.poetry]
name = "doodle-bump"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "doodle_bump"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
